# mcmgmt

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: fetch_server.rs  mod.rs  set_properties.rs
src/commands/eula_updater/: eula_updater.rs  mod.rs
src/commands/get_server/: fetch_server.rs  mod.rs
src/commands/run_server/: mod.rs  run_server.rs
src/commands/set_properties/: mod.rs  set_properties.rs
src/types/: capacity.rs  difficulty.rs  gamemode.rs  mod.rs
tests/: eula.txt  server.properties
