[package]
name = "mcmgmt"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = { version = "1.41.1", features = ["full"] }
